<resources>
    <string name="app_name">Homework3</string>
    <string name="attractions">Attractions</string>
    <string name="dining">Dining</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="health">Health</string>
    <string name="office">Office</string>
    <string name="promotions">Promotions</string>
    <string name="radio">Radio</string>
    <string name="recipes">Recipes</string>
    <string name="sports">Sports</string>
    <string name="poi">POI</string>
    <string name="photo">PHOTO</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>
    <string name="singIn">Sing in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="justSignIn">* Just sign in</string>
    <string name="android">Android</string>
    <string name="posts">125 Posts</string>
    <string name="followers">20K Followers</string>
    <string name="following">22 Following</string>
    <string name="userName">Username</string>
    <string name="address">Address</string>
    <string name="directions">DIRECTIONS</string>
    <string name="call">CALL</string>
    <string name="save">SAVE</string>
    <string name="website">WEBSITE</string>
    <string name="certificated">Certificated</string>
    <string name="layouts">Layouts</string>
    <string name="views">Views</string>

</resources>