<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/photo"
        android:background="@color/gray_400"
        android:textSize="70sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_alignParentTop="true" />

    <ImageButton
        android:id="@+id/imageView_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_baseline_photo_camera_24"
        android:contentDescription="@string/photo"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignBottom="@+id/textView"/>

    <EditText
        android:id="@+id/editView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:autofillHints="@string/title"
        android:inputType="text"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"/>

    <EditText
        android:id="@+id/editView_title_price"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:autofillHints="@string/price"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/editView_title"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText_location"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:autofillHints="@string/location"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/editView_title"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/location"
        android:src="@drawable/ic_baseline_place_24"
        android:layout_marginBottom="10dp"
        android:layout_alignBottom="@+id/editText_location"
        android:layout_alignEnd="@+id/editText_location" />

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:autofillHints="@string/description"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/editText_location" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/inventory"
        android:autofillHints="@string/inventory"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/editText_description"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:autofillHints="@string/weight"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/editText_description"
        android:layout_alignParentEnd="true" />

</RelativeLayout>