<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewSpan"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/gray_400"
            android:gravity="center"
            android:text="@string/photo"
            android:textColor="@color/black"
            android:textSize="70sp" />

        <ImageButton
            android:id="@+id/imageView_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/photo"
            app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

    </FrameLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="@string/title"
        android:hint="@string/title"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:autofillHints="@string/price"
            android:hint="@string/price"
            android:inputType="text" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="@string/location"
                android:hint="@string/location"
                android:inputType="text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/location"
                android:src="@drawable/ic_baseline_place_24" />

        </FrameLayout>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="@string/description"
        android:gravity="bottom"
        android:hint="@string/description"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:autofillHints="@string/inventory"
            android:hint="@string/inventory"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="@string/weight"
            android:hint="@string/weight"
            android:inputType="text" />

    </LinearLayout>

</LinearLayout>