<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewSpan"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:text="@string/photo"
            android:background="@color/gray_400"
            android:textSize="70sp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/imageView_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/ic_baseline_photo_camera_24"
            android:contentDescription="@string/photo"
            android:layout_gravity="bottom|end"/>

    </FrameLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:autofillHints="@string/title"
        android:inputType="text"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:autofillHints="@string/price"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_gravity="bottom" />

           <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:autofillHints="@string/location"
                    android:inputType="text"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_gravity="bottom"/>

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_baseline_place_24"
                   android:contentDescription="@string/location"
                   android:layout_gravity="bottom|end"
                   android:layout_marginEnd="20dp"
                   android:layout_marginBottom="10dp"/>

    </FrameLayout>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/description"
        android:autofillHints="@string/description"
        android:inputType="text"
        android:gravity="bottom"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="bottom|end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/inventory"
            android:autofillHints="@string/inventory"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:layout_gravity="bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:autofillHints="@string/weight"
            android:inputType="text"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="160dp"
            android:layout_gravity="bottom"/>

    </LinearLayout>

</LinearLayout>