<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewSpan"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingStart="20dp"
        android:paddingTop="40dp"
        android:gravity="start"
        android:text="@string/singIn"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@string/email"
        android:background="@drawable/edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="25dp"
        android:paddingBottom="5dp"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@string/password"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="25dp"
        android:paddingBottom="5dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:paddingStart="10dp"
            android:checked="true"
            android:textSize="18sp"
            android:text="@string/remember" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:text="@string/forgotPassword"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button_signIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/sign_in"
        android:text="@string/singIn"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_JustSingIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:text="@string/justSignIn"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

</LinearLayout>